package vchat.state.models.values

case class SessionID(value: String)
